Add Citra AppImage builds (#6404)
* Create install_dependencies.sh

* Create build.sh

* Update ci.yml

Add AppImage Builds

* Delete unneeded line

* Remove unneeded command

Removed unneeded chmod a+x for a deleted file

* Change cp command to mv

Reduces AppImage file size by about 20mb

* Update Install dependencies for Ninja builds

* Change to Ninja build system

Additionally adds the correct Build flags to make all Languages appear again and should make compatibility ratings appear again. Also removes unneeded empty folder.

* add missing platformthemes

This restores all previously missing Icons and Citra uses now the systems default filepicker.

* Git make Executable

* Remove unnecessary make scripts executable command

* Change build to Debian 11 and use Docker

* Change workflow for AppImage Docker builds

* Change description of Command to the correct one

* Fix themeing after switch to Debian 11

* Only upload .AppImage

* Include AppImage in releases

* Update upload.sh

* Move to rev name

---------

Co-authored-by: MT19048 <86961834+MT19048@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: ["linux-fresh", "linux-frozen", "linux-mingw"]
+        image: ["linux-appimage", "linux-fresh", "linux-frozen", "linux-mingw"]
     container:
       image: citraemu/build-environments:${{ matrix.image }}
       options: -u 1001
@@ -234,4 +234,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          asset_paths: '["./**/*.tar.*","./**/*.7z","./**/*.zip","./**/*.apk","./**/*.aab"]'
+          asset_paths: '["./**/*.tar.*","./**/*.AppImage","./**/*.7z","./**/*.zip","./**/*.apk","./**/*.aab"]'
