--- a/src/android/app/build.gradle
+++ b/src/android/app/build.gradle
@@ -129,6 +129,7 @@ dependencies {
     implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0"
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.core:core-splashscreen:1.0.0'
+    implementation "androidx.work:work-runtime:2.8.1"
 
     // For loading huge screenshots from the disk.
     implementation 'com.squareup.picasso:picasso:2.71828'
