--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -190,3 +190,16 @@ if(ANDROID)
     add_subdirectory(libyuv)
     target_include_directories(yuv INTERFACE ./libyuv/include)
 endif()
+
+# OpenAL Soft
+if (ENABLE_OPENAL)
+    set(ALSOFT_EMBED_HRTF_DATA OFF CACHE BOOL "")
+    set(ALSOFT_EXAMPLES OFF CACHE BOOL "")
+    set(ALSOFT_INSTALL OFF CACHE BOOL "")
+    set(ALSOFT_INSTALL_CONFIG OFF CACHE BOOL "")
+    set(ALSOFT_INSTALL_HRTF_DATA OFF CACHE BOOL "")
+    set(ALSOFT_INSTALL_AMBDEC_PRESETS OFF CACHE BOOL "")
+    set(ALSOFT_UTILS OFF CACHE BOOL "")
+    set(LIBTYPE "STATIC" CACHE STRING "")
+    add_subdirectory(openal-soft EXCLUDE_FROM_ALL)
+endif()
