--- a/src/audio_core/CMakeLists.txt
+++ b/src/audio_core/CMakeLists.txt
@@ -20,18 +20,25 @@ add_library(audio_core STATIC
     hle/source.h
     lle/lle.cpp
     lle/lle.h
+    input.h
+    input_details.cpp
+    input_details.h
     interpolate.cpp
     interpolate.h
+    null_input.h
     null_sink.h
     precompiled_headers.h
     sink.h
     sink_details.cpp
     sink_details.h
+    static_input.cpp
+    static_input.h
     time_stretch.cpp
     time_stretch.h
 
     $<$<BOOL:${ENABLE_SDL2}>:sdl2_sink.cpp sdl2_sink.h>
     $<$<BOOL:${ENABLE_CUBEB}>:cubeb_sink.cpp cubeb_sink.h cubeb_input.cpp cubeb_input.h>
+    $<$<BOOL:${ENABLE_OPENAL}>:openal_input.cpp openal_input.h openal_sink.cpp openal_sink.h>
 )
 
 create_target_directory_groups(audio_core)
@@ -90,6 +97,12 @@ endif()
 if(ENABLE_CUBEB)
     target_link_libraries(audio_core PRIVATE cubeb)
     target_compile_definitions(audio_core PUBLIC HAVE_CUBEB)
+endif()
+
+if(ENABLE_OPENAL)
+    target_link_libraries(audio_core PRIVATE OpenAL)
+    target_compile_definitions(audio_core PUBLIC HAVE_OPENAL)
+    add_definitions(-DAL_LIBTYPE_STATIC)
 endif()
 
 if (CITRA_USE_PRECOMPILED_HEADERS)
