logging: Make use of bounded queue

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -57,6 +57,7 @@ add_library(citra_common STATIC
     detached_tasks.h
     bit_field.h
     bit_set.h
+    bounded_threadsafe_queue.h
     cityhash.cpp
     cityhash.h
     color.h
