core: backport some ResultCode updates (#6645)
Co-authored-by: Lioncash <mathew1800@gmail.com>
Co-authored-by: Morph <39850852+Morph1984@users.noreply.github.com>

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -73,6 +73,7 @@ add_library(citra_common STATIC
     dynamic_library/ffmpeg.h
     error.cpp
     error.h
+    expected.h
     file_util.cpp
     file_util.h
     hash.h
